[SCN-59] Эндпоинт для проверки почты
