# internal/delivery/http/v1/users.go
@@ -9,10 +9,33 @@ import (
 func (h *Handler) initUsersRoutes(api *gin.RouterGroup) {
 	auth := api.Group("/auth")
 	{
+		auth.POST("/user-existence", h.isUserExists)
 		auth.POST("/sign-up", h.signUp)
 		auth.POST("/sign-in", h.signIn)
 		auth.POST("/refresh", h.refresh)
 	}
+}
+
+// @Summary User existence
+// @Tags User Auth
+// @Description User existence
+// @Accept  json
+// @Produce  json
+// @Param input body entity.UserExistenceInput true "User existence info"
+// @Success 200 {object} userExistenceResponse
+// @Failure 400,404 {object} response
+// @Router /auth/user-existence [post]
+func (h *Handler) isUserExists(c *gin.Context) {
+	var input entity.UserExistenceInput
+
+	if err := c.BindJSON(&input); err != nil {
+		newResponse(c, http.StatusBadRequest, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, userExistenceResponse{
+		Exists: h.services.Users.Existence(input),
+	})
 }
 
 // @Summary User SignUp
